@@ -1,3 +1,7 @@
+2007-08-30  Mark Ellis  <mark@mpellis.org.uk>
+
+	* add plugin for trayicon to add server volume
+
 2007-08-29  Mark Ellis  <mark@mpellis.org.uk>
 
 	* implement get volume free space
